// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component as disabled 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

.emotion-2 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: none;
  border-radius: 6px;
  cursor: not-allowed;
  opacity: 0.5;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  color: #1B273A;
  background: none;
  border-color: transparent;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
}

.emotion-2 svg {
  fill: currentColor;
}

.emotion-2:hover {
  background-color: #F7F9FA;
  color: #111B2B;
}

.emotion-2:active {
  -webkit-transition: none;
  transition: none;
}

.emotion-2:active,
.emotion-2:active:hover {
  background-color: #F7F9FA;
  border-color: #F7F9FA;
}

.emotion-2:focus {
  background-color: none;
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-2"
    data-node-id="dropdown-trigger-61728000"
    data-test-id="cf-ui-button"
    disabled=""
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        aria-label="Actions"
        class="emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component using a multiple dropdown lists 1`] = `
.emotion-2 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: none;
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  color: #1B273A;
  background: none;
  border-color: transparent;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
}

.emotion-2 svg {
  fill: currentColor;
}

.emotion-2:hover {
  background-color: #F7F9FA;
  color: #111B2B;
}

.emotion-2:active {
  -webkit-transition: none;
  transition: none;
}

.emotion-2:active,
.emotion-2:active:hover {
  background-color: #F7F9FA;
  border-color: #F7F9FA;
}

.emotion-2:focus {
  background-color: none;
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-2"
    data-node-id="dropdown-trigger-61728000"
    data-test-id="cf-ui-button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        aria-label="Actions"
        class="emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component using a single dropdown list 1`] = `
.emotion-2 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: none;
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  color: #1B273A;
  background: none;
  border-color: transparent;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
}

.emotion-2 svg {
  fill: currentColor;
}

.emotion-2:hover {
  background-color: #F7F9FA;
  color: #111B2B;
}

.emotion-2:active {
  -webkit-transition: none;
  transition: none;
}

.emotion-2:active,
.emotion-2:active:hover {
  background-color: #F7F9FA;
  border-color: #F7F9FA;
}

.emotion-2:focus {
  background-color: none;
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-2"
    data-node-id="dropdown-trigger-61728000"
    data-test-id="cf-ui-button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        aria-label="Actions"
        class="emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-2 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: none;
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  color: #1B273A;
  background: none;
  border-color: transparent;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
}

.emotion-2 svg {
  fill: currentColor;
}

.emotion-2:hover {
  background-color: #F7F9FA;
  color: #111B2B;
}

.emotion-2:active {
  -webkit-transition: none;
  transition: none;
}

.emotion-2:active,
.emotion-2:active:hover {
  background-color: #F7F9FA;
  border-color: #F7F9FA;
}

.emotion-2:focus {
  background-color: none;
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  class="Dropdown my-extra-class"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-2"
    data-node-id="dropdown-trigger-61728000"
    data-test-id="cf-ui-button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        aria-label="Actions"
        class="emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component with published status 1`] = `
.emotion-2 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: none;
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  transition: background 0.1s ease-in-out, opacity 0.2s ease-in-out, border-color 0.2s ease-in-out;
  color: #1B273A;
  background: none;
  border-color: transparent;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
}

.emotion-2 svg {
  fill: currentColor;
}

.emotion-2:hover {
  background-color: #F7F9FA;
  color: #111B2B;
}

.emotion-2:active {
  -webkit-transition: none;
  transition: none;
}

.emotion-2:active,
.emotion-2:active:hover {
  background-color: #F7F9FA;
  border-color: #F7F9FA;
}

.emotion-2:focus {
  background-color: none;
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="emotion-2"
    data-node-id="dropdown-trigger-61728000"
    data-test-id="cf-ui-button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        aria-label="Actions"
        class="emotion-0"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </span>
  </button>
</div>
`;
